--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY Qiu."
+description: "Hey, this is by RaelynX."
 header-img: "img/home-bg-o.jpg"
 ---
 
@@ -15,14 +15,14 @@ header-img: "img/home-bg-o.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒，<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p><br>
+    </p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>嗨，我是<strong>RaelynX</strong>是一个就读统计学的学生^^</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。</p>
+    <p>趁着假期，尝试使用了<a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> 来创建一个简单的博客</p>
 
-    <p>工作、学习之余，我特别喜欢运动，跑步、健身和自由搏击都是我特别喜欢的运动。</p>
+    <p>这个博客只是私人用处哦！</p>
     
     <h5>Talks</h5>
 
@@ -38,14 +38,13 @@ header-img: "img/home-bg-o.jpg"
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>BaiYing(柏荧)</strong>，you can call me <strong>BY</strong>. I'm an iOS Developer.I now working in Xiamen Supermo Intelligent Logistics Technology Co., Ltd.</p>
+    <p>Hi，I am <strong>RaelynX</strong>,I am a student who major in statistical computing and operations research</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>I have tried used <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> to build a blog.</p>
+
+    <p>This blog is just for personel purpose./p>
     
-    <p>I am a sports enthusiast, I like fitness, running and tae kwon do, sports is my full of vitality.</p>
-
     <h5>Talks</h5>
-
     <ul>
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
